# pseudo_manifest

./: Cargo.toml  README.md  Taskfile.yml
src/: main.rs
