[package]
name = "pseudo_manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
clap = { version = "4.5.2", features = ["derive"] }
path-clean = "1.0.1"
home = "0.5.9"
toml = "0.8.11"
